@@ -45,8 +45,9 @@ List bad_tres_list = NULL;
 /*
  * Any time you have to add to an existing convert update this number.
  * NOTE: 6 was the first version of 18.08.
+ * NOTE: 7 was the first version of 19.05.
  */
-#define CONVERT_VERSION 6
+#define CONVERT_VERSION 7
 
 typedef struct {
 	uint64_t count;
@@ -809,6 +810,19 @@ extern int as_mysql_convert_non_cluster_tables_post_create(
 		debug4("%s: No conversion needed, Horray!", __func__);
 		return SLURM_SUCCESS;
 	}
+
+	if (db_curr_ver < 7) {
+		/*
+		 * In 19.05 we changed the name of the TRES bb/cray to be
+		 * bb/datawarp.
+		 */
+		char *query = xstrdup_printf(
+			"update %s set name='datawarp' where type='bb' and name='cray'",
+			tres_table);
+		rc = mysql_db_query(mysql_conn, query);
+		xfree(query);
+	}
+
 
 	if (rc == SLURM_SUCCESS) {
 		char *query = xstrdup_printf(
